# wbtrack

./: .gitignore  README.md
backend/: Makefile  alembic.ini  app.py  asgi.py  config.py  docker-compose.dev.yml  pyproject.toml
backend/api/: router.py
backend/api/dependencies/: api_auth.py  employee.py  user.py
backend/api/v1/: router.py
backend/api/v1/endpoints/: auth.py  company.py  employee.py  user.py
backend/core/: db.py  exceptions.py  redis.py  user_management.py
backend/core/utils/: pagination.py  sqlmodel.py
backend/crud/: base.py  company.py  employee.py  office.py
backend/enums/: common.py  user.py
backend/middleware/: token_refresh_middleware.py
backend/migrations/: env.py
backend/models/: __init__.py  base.py  base_mixin.py  company.py  company_user.py  employee.py  office.py  user.py
backend/schemas/: company.py  employee.py  model.py  office.py  response.py  user.py
backend/services/: api_service.py  user.py
backend/services/bot/: bot_init.py  handlers.py  hash_check.py  index.html  run.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  middleware.ts  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/[[...sign-in]]/: page.tsx
frontend/app/auth/: auth.ts  definitions.ts  session.ts
frontend/app/context/: AuthContext_.ts  index.tsx
frontend/components/: MainContent.tsx  Menu.tsx  Navbar.tsx  Sidebar.tsx  Spinner.tsx  SubmitButton.tsx
frontend/constants/: index.ts
frontend/lib/: errorHandler.ts  validation.ts
(+43 files in other folders)
